# test_project

./: .dockerignore  .env.example  .flake  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
core_task/: manage.py
core_task/api/core/application/exceptions/: credit_exceptions.py  product_exceptions.py
core_task/api/core/application/interfaces/repositories/: credit_application_repo.py
core_task/api/core/application/usecases/: get_manufacturers.py
core_task/api/core/domain/entities/: __init__.py  contract.py  credit_application.py  manufacturer.py  product.py
core_task/api/core/infrastructure/repositories/credit/: credit_mapper.py  repo.py
core_task/api/v1/: urls.py
core_task/api/v1/credit_application/: urls.py
core_task/contract/: admin.py  models.py  serializers.py
core_task/contract/migrations/: 0001_initial.py
core_task/credit_application/: admin.py  apps.py  models.py  serializers.py  views.py
core_task/credit_application/migrations/: 0001_initial.py
core_task/manufacturer/: admin.py  models.py  serializers.py
core_task/manufacturer/migrations/: 0001_initial.py
core_task/mixins/: models.py
core_task/product/: models.py  serializers.py
core_task/product/migrations/: 0001_initial.py
core_task/test_task/: asgi.py  settings.py  urls.py  wsgi.py
